log
Wed 24 Apr 2024 09:33:31 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:15: error: array subscript is not an integer
   58 |   map->buckets[NULL];
      |               ^
Compilation failed
c22b9c1
Wed 24 Apr 2024 09:34:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
be12052
Wed 24 Apr 2024 09:35:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:64:5: error: conversion to non-scalar type requested
   64 |     return (HashMap)map;
      |     ^~~~~~
hashmap.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d7ccc4b
Thu 25 Apr 2024 12:58:22 AM UTC: 
 hashmap.c | 60 ++++++++++++++++++++++++++++++++++++++++++++++++------------
 1 file changed, 48 insertions(+), 12 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:52:43: error: expected statement before ‘]’ token
   52 |     while (map->buckets[position] != NULL)]
      |                                           ^
hashmap.c: In function ‘eraseMap’:
hashmap.c:96:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   96 |   while(map->buckets[position] != NULL && map->buckets[position]->key != NULL);
      |   ^~~~~
hashmap.c:97:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   97 |   {
      |   ^
cc1: all warnings being treated as errors
Compilation failed
7dc7e71
Thu 25 Apr 2024 12:58:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:52:43: error: expected statement before ‘]’ token
   52 |     while (map->buckets[position] != NULL)]
      |                                           ^
Compilation failed
58b578a
Thu 25 Apr 2024 01:00:33 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
e6f8278
Thu 25 Apr 2024 01:03:00 AM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
bac94a7
Thu 25 Apr 2024 01:05:11 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
7066d72
Thu 25 Apr 2024 01:07:47 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  17|0
total_score: 70/70
74a7fa1
